test/tests/operators/to_google_secops/ingestion_rich_labels.txt
error: `labels.tenant` must be a string for `api="ingestion"`
 --> tests/operators/to_google_secops/ingestion_rich_labels.tql:7:25
  |
7 |   log_text=text, labels={tenant: {value: "acme", rbac_enabled: true}},
  |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
